--- a/PTsetUP/PTsetUP/My Project/Settings.settings
+++ b/PTsetUP/PTsetUP/My Project/Settings.settings
@@ -5,5 +5,11 @@
     <Setting Name="PTpath" Type="System.String" Scope="User">
       <Value Profile="(Default)">none</Value>
     </Setting>
+    <Setting Name="PTbackup" Type="System.String" Scope="User">
+      <Value Profile="(Default)">none</Value>
+    </Setting>
+    <Setting Name="LogToTXT" Type="System.String" Scope="User">
+      <Value Profile="(Default)">none</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
