--- a/PTsetUP/PTsetUP/App.config
+++ b/PTsetUP/PTsetUP/App.config
@@ -32,6 +32,12 @@
             <setting name="PTpath" serializeAs="String">
                 <value>none</value>
             </setting>
+            <setting name="PTbackup" serializeAs="String">
+                <value>none</value>
+            </setting>
+            <setting name="LogToTXT" serializeAs="String">
+                <value>none</value>
+            </setting>
         </PTsetUP.My.MySettings>
     </userSettings>
 </configuration>
