--- a/PTsetUP/PTsetUP/PTsetUP.vbproj
+++ b/PTsetUP/PTsetUP/PTsetUP.vbproj
@@ -75,6 +75,9 @@
     <Compile Include="Class1.vb">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Class2.vb">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Form1.Designer.vb">
       <DependentUpon>Form1.vb</DependentUpon>
     </Compile>
